[package]
name = "usb_vhci"
version = "0.1.0"
edition = "2021"

[dependencies]
bit-vec = "0.8.0"
bitflags = "2.6.0"
heapless = "0.8.0"
nix = { version = "0.29.0", default-features = false, features = ["ioctl"] }
nohash-hasher = "0.2.0"
num_enum = "0.7.3"
zerocopy = "0.8.14"
zerocopy-derive = "0.8.14"
